--- a/studio-ghibli/src/global.scss
+++ b/studio-ghibli/src/global.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -52,4 +53,5 @@ table {
 * {
     box-sizing: border-box;
     font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
 }
