added the top bar and styled it with material ui

--- a/studio-ghibli/src/global.scss
+++ b/studio-ghibli/src/global.scss
@@ -50,7 +50,7 @@ table {
 
 // END OF RESET
 
-* {
+*, html, body {
     box-sizing: border-box;
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
