tried to figure out some more styling had issues

--- a/studio-ghibli/src/global.scss
+++ b/studio-ghibli/src/global.scss
@@ -53,5 +53,6 @@ table {
 *, html, body {
     box-sizing: border-box;
     font-size: 62.5%;
-    font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto', sans-serif;
+	height: 100%;
 }
